--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next --openssl-legacy-provider dev",
+    "build": "next --openssl-legacy-provider build",
+    "start": "next --openssl-legacy-provider start",
+    "lint": "nex --openssl-legacy-provider  lint"
   },
   "dependencies": {
     "next": "11.1.2",
