--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next --openssl-legacy-provider dev",
-    "build": "next --openssl-legacy-provider build",
-    "start": "next --openssl-legacy-provider start",
-    "lint": "nex --openssl-legacy-provider  lint"
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider --inspect' next dev",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider --inspect' next build",
+    "start": "cross-env NODE_OPTIONS='--openssl-legacy-provider --inspect' next start",
+    "lint": "cross-env NODE_OPTIONS='--openssl-legacy-provider --inspect' next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
